# R-osisaf

./: DESCRIPTION  NAMESPACE  configure  configure.ac
R/: .latlon2ucs.R.swp  .monhourlyssi.r.swp  .osisafimage.r.swp  .osisafmap.r.swp  biasmargin.R  compHLLMLflux.R  compprocchains.R  credf.R  dailyssiweights.R  estdailyssi.R  gammaPDF.R  gammaPDF2parest.R  gammaPDF3parest.R  gammaPDFestSAGOB.R  gammaPDFestSAGOBmulti.R  gammaPDFplot.R  gammaPDFtableplot.R  getVACclass.R  intercomp.R  latlon2ucs.R  mondailyssi.R  monhourlyssi.R  monthnameconvert.R  mycolours.R  normalPDF.R  normalPDFest.R  normalPDFplot.R  osisafimage.R  osisafmap.R  plotVACcont.R  plotVAChist.R  plotfluxval.R  readSAGOB.R  readVAC.R  readdailyval.R  readhourlydlival.R  readhourlyssival.R  readosisaf.R  sdevmargin.R  solzencorrect.R  (+3 more)
avhrr-ice/: README  gammacheck.sl  gammaeda.sl  gammaeda.sl_old  gammaest.sl  gammaest2.sl  gammamulti.sl  gammapdf.sl  gammatable.sl  monthconv.sl  normalpdf.sl  plothist.sl  plothist.sl_20041116  readSAGOB.sl
data/: .osisafmapdata_tmp.r.swp  HLPOLARmap.RData  LMLMSGmap.RData  osisafmapdata.RData
man/: .monhourlyssi.Rd.swp  .osisafimage.Rd.swp  HLPOLARmap.Rd  LMLMSGmap.Rd  biasmargin.Rd  compHLLMLflux.Rd  compHLLMLwflux.Rd  compprocchains.Rd  credf.Rd  gamaPDFtableplot.Rd  gammaPDF.Rd  gammaPDF2parest.Rd  gammaPDF3parest.Rd  gammaPDFestSAGOB.Rd  gammaPDFestSAGOBmulti.Rd  gammaPDFplot.Rd  getVACclass.Rd  latlon2ucs.Rd  mondailyssi.Rd  monhourlyssi.Rd  monthnameconvert.Rd  mycolours.Rd  normalPDFest.Rd  normalPDFplot.Rd  osisaf-package.Rd  osisafimage.Rd  osisafmapdata.Rd  plotVAChist.Rd  plotfluxval.Rd  readSAGOB.Rd  readVAC.Rd  readdailyval.Rd  readhourlydlival.Rd  readhourlyssival.Rd  readosisaf.Rd  sdevmargin.Rd  solzencorrect.Rd  ucs2latlon.Rd
src/: .readosisafheader.c.swp  Makevars.in  errmsg.c  readosisaf.h  readosisafdata.c  readosisafheader.c
